# cloudmesh-ai-cmc

./: .gitignore  0  50  CHANGELOG.md  DOCS.md  MANIFEST.in  Makefile  README.md  VERSION  pyproject.toml  requirements.txt  setup.py
src/cloudmesh/ai/: main.py  registry.py  utils.py
src/cloudmesh/ai/cmc/: DOCS.md  __init__.py  context.py  main.py  registry.py  utils.py
src/cloudmesh/ai/cmc/templates/: Makefile  plugin.py.tmpl  pyproject.toml.tmpl
src/cloudmesh/ai/command/: banner.py  command.py  completion.py  config.py  docs.py  doctor.py  help_cmd.py  logs.py  man.py  plugins.py  progress.py  shell.py  telemetry.py  time.py  tree.py  version.py
src/cloudmesh/ai/command/markdown/: __init__.py  gemini.py
src/cloudmesh/ai/command/sys/: __init__.py  info.py
src/cloudmesh/ai/extension/: banner.py  command.py  docs.py  man.py  tree.py
src/cloudmesh/ai/extension/markdown/: __init__.py
src/cloudmesh/ai/extension/sys/: __init__.py
src/cloudmesh/ai/templates/: Makefile  plugin.py.tmpl  pyproject.toml.tmpl
tests/: test_banner.py  test_completion.py  test_main.py  test_plugin_integration.py  test_plugins.py  test_plugins_dx.py  test_polish.py  test_progress.py  test_registry.py  test_shell_completion.py  test_telemetry.py  test_time.py
