[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-core"
dynamic = ["version"]
description = "CMC: Cloudmesh Command for AI"
license = {text = "Apache-2.0"}
keywords = ["cmc", "extension", "cli", "click", "cloudmesh"]
dependencies = [
    "click",
    "rich",
    "shellingham",
    "pytest",
    "pip-tools"
]

[project.scripts]
cmc = "cloudmesh.ai.main:cli"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools]
# Tells setuptools to look inside the 'src' directory for packages
package-dir = {"" = "src"}

# [project.entry-points."cloudmesh.ai.extension"]
# cmc = "extension.cmc:register"

[tool.setuptools.packages.find]
where = ["src"]
include = ["extension*"]